{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 177,
  "lineage": "e94779bd-ee2a-2423-de4d-be174651c28a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "InstanceForAssignment2TF",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06b72b3b2a773be2b",
            "arn": "arn:aws:ec2:ap-south-1:730335487196:instance/i-0ea26beacb96c3816",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ea26beacb96c3816",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-newkeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b6449acb626187be",
            "private_dns": "ip-10-0-1-150.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.150",
            "public_ip": "35.154.105.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ea00fd1971d5d123",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-090e16e1a80bf2905"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d5e1141ee9662ef0",
            "tags": {
              "Name": "InstanceforAssignement2TF"
            },
            "tags_all": {
              "Name": "InstanceforAssignement2TF"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-090e16e1a80bf2905"
            ]
          },
          "dependencies": [
            "aws_key_pair.key-tf",
            "aws_s3_bucket.BucketByTF",
            "aws_security_group.SecurityGroupAssignement2TF",
            "aws_subnet.subnetTF",
            "aws_vpc.VPCTF"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gwTF",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335487196:internet-gateway/igw-0cf25d6552915a0d4",
            "id": "igw-0cf25d6552915a0d4",
            "owner_id": "730335487196",
            "tags": {
              "Name": "gwTF"
            },
            "tags_all": {
              "Name": "gwTF"
            },
            "vpc_id": "vpc-051610c5c5f4d44ed"
          },
          "dependencies": [
            "aws_vpc.VPCTF"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RouteTableAssignment2TF",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335487196:route-table/rtb-00d27836590d4cdcb",
            "id": "rtb-00d27836590d4cdcb",
            "owner_id": "730335487196",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cf25d6552915a0d4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "routeTF"
            },
            "tags_all": {
              "Name": "routeTF"
            },
            "timeouts": null,
            "vpc_id": "vpc-051610c5c5f4d44ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gwTF",
            "aws_vpc.VPCTF"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tableassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8ac0697cb6e2ab2",
            "route_table_id": "rtb-00d27836590d4cdcb",
            "subnet_id": "subnet-0d5e1141ee9662ef0"
          },
          "dependencies": [
            "aws_internet_gateway.gwTF",
            "aws_route_table.RouteTableAssignment2TF",
            "aws_subnet.subnetTF",
            "aws_vpc.VPCTF"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SecurityGroupAssignement2TF",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335487196:security-group/sg-090e16e1a80bf2905",
            "description": "Allow HTTP (port 80) and SSH (port 22) ingress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-090e16e1a80bf2905",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SecurityGroupAssignement2TF",
            "name_prefix": "",
            "owner_id": "730335487196",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-051610c5c5f4d44ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPCTF"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnetTF",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335487196:subnet/subnet-0d5e1141ee9662ef0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5e1141ee9662ef0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335487196",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnetTF"
            },
            "tags_all": {
              "Name": "subnetTF"
            },
            "vpc_id": "vpc-051610c5c5f4d44ed"
          },
          "dependencies": [
            "aws_vpc.VPCTF"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPCTF",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335487196:vpc/vpc-051610c5c5f4d44ed",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08de0d8ed21e9063c",
            "default_route_table_id": "rtb-095decdfe5a35898f",
            "default_security_group_id": "sg-0994a21f3a6a0f731",
            "dhcp_options_id": "dopt-07abf5ce04b972dab",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-051610c5c5f4d44ed",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-095decdfe5a35898f",
            "owner_id": "730335487196",
            "tags": {
              "Name": "VPCTF"
            },
            "tags_all": {
              "Name": "VPCTF"
            }
          }
        }
      ]
    }
  ]
}